<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minHeight="48dp"
    tools:context=".view.MainActivity">

    <!-- Login -->
    <EditText
        android:id="@+id/edt_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/login_placeholder"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Senha -->
    <EditText
        android:id="@+id/edt_pw"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/senha_placeholder"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/edt_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Nome -->
    <EditText
        android:id="@+id/edt_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/nome_placeholder"
        app:layout_constraintTop_toBottomOf="@id/edt_pw"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Email -->
    <EditText
        android:id="@+id/edt_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_placeholder"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/edt_nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- URL -->
    <EditText
        android:id="@+id/edt_url"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/url_de_imagem_de_perfil_placeholder"
        android:inputType="textUri"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Botões -->
    <Button
        android:id="@+id/btn_cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        app:layout_constraintTop_toBottomOf="@id/edt_url"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toStartOf="@id/btn_entrar" />

    <Button
        android:id="@+id/btn_entrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/entrar"
        app:layout_constraintTop_toBottomOf="@id/edt_url"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@id/btn_cadastrar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_debug"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/Debug_Button"
        android:src="@android:drawable/ic_menu_agenda"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>