<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.UserActivity">

    <ImageView
        android:id="@+id/userImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/edtv_nome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtv_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/nome_placeholder"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="160dp"/>

    <EditText
        android:id="@+id/edtv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_placeholder"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtv_nome" />

    <EditText
        android:id="@+id/edtv_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/url_de_imagem_de_perfil_placeholder"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtv_email" />

    <EditText
        android:id="@+id/edtv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_placeholder"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtv_url" />

    <EditText
        android:id="@+id/edtv_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/senha_placeholder"
        android:textAlignment="center"
        android:textSize="24sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtv_login" />

    <Button
        android:id="@+id/btn_update"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="@string/alterar_dados_btn_placeholder"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtv_pw" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="@string/excluir_registro_btn_placeholder"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_update" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/back_button_placeholder"
        android:src="@android:drawable/ic_menu_revert"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>